--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <!-- everything u see on page-->
-        This is Yuwan's website <b>yay!!<3</b>
+        This is Yuwan's website hi<b>yay!!<3</b>
         <button onclick="location.href = 'https://www.instagram.com/leesol0603/'" type="button">
         click for instagram</button>
     </body>
