--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <br>
         <button onclick="location.href = 'https://www.instagram.com/leesol0603/'" type="button">
         click for instagram</button>
+        
+        <p>
+            click for olivia lee's instagram <a target="_blank" href="https://www.instagram.com/leesol0603/"> here!!!</a>
+        </p>
     </body>
 
     
