--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <p>
             click for olivia lee's instagram <a target="_blank" href="https://www.instagram.com/leesol0603/"> here!!!</a>
         </p>
+        
+        <br>
+        <input type="text" placeholder="type in ur name here just for fun">
     </body>
 
     
