--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <br>
         <br>
         <b>Olivia Lee's 3x3 pbs</b>
+        pb: 9.70 (rs3m 2020 yoo setup) D R2 U2 R' U2 F2 L2 B2 U2 R' B2 L B' L' B F2 R' F2 D 
         mo3: 12.28 (xman tornado v2)
         ao5: 12.31 (valk elite m)
         ao12: 13.55 (valk elite m)
