--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
 
 
-        <a href="https://github.com/leesolivia14/Movie-Name-Generator">Movie Name Generator</a>
+        <a href="google.com">Movie Name Generator</a>
  
     </body>
 
